<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radioMap_title"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/title"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"/>

    <de.lmu.mvs.fpmonitor.MapView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_below="@id/title"
        android:layout_marginTop="70dp"
        android:id="@+id/wlan_view"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recordTV"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_below="@id/wlan_view"/>

    <TableRow
        android:layout_below="@id/recordTV"
        android:id="@+id/recordFunctions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/recordBtn"
            android:text="@string/radioMap_recordBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/nextBtn"
            android:text="@string/radioMap_nextBtn"/>

    </TableRow>

    <TableRow
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/showDB"
            android:text="@string/radioMap_showBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/deleteDB"
            android:text="@string/radioMap_deleteBtn"/>

    </TableRow>

</RelativeLayout>
